# patot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/patot/: __init__.py  analytics.py  cache.py  chunker.py  config.py  debug_report.py  embedding.py  json_loader.py  pipeline.py  records.py  splitters.py  task_setups.py
tests/: test_cache.py  test_json_loader.py  test_splitters.py  test_text_utils.py
